fix navigation wrap on landing

--- a/target.css
+++ b/target.css
@@ -8,6 +8,8 @@
 
 #landing-navigation {
 	gap: 7vw;
+	/*overflow: hidden;*/
+	white-space: nowrap;
 }
 
 .arrow {
